--- a/src/main/resources/com/example/demofx1/game-view.fxml
+++ b/src/main/resources/com/example/demofx1/game-view.fxml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 <BorderPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.example.demofx1.GameController">
-
+    <center>
+        <Pane fx:id="pane" prefHeight="400.0" prefWidth="400.0" BorderPane.alignment="CENTER" onKeyPressed="#processKey"
+              focusTraversable="true">
+            <Canvas fx:id="canvas" height="400.0" width="400.0"/>
+        </Pane>
+    </center>
 </BorderPane>
