--- a/src/main/resources/com/example/demofx1/game-view.fxml
+++ b/src/main/resources/com/example/demofx1/game-view.fxml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
 <BorderPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.example.demofx1.GameController">
     <center>
-        <Pane fx:id="pane" prefHeight="400.0" prefWidth="400.0" BorderPane.alignment="CENTER" onKeyPressed="#processKey"
-              focusTraversable="true">
+        <Pane fx:id="pane" focusTraversable="true" onKeyPressed="#processKey" prefHeight="400.0" prefWidth="400.0"
+              BorderPane.alignment="CENTER">
             <Canvas fx:id="canvas" height="400.0" width="400.0"/>
         </Pane>
     </center>
+    <bottom>
+        <FlowPane prefHeight="34.0" prefWidth="400.0" BorderPane.alignment="CENTER">
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </padding>
+            <Label fx:id="score" prefHeight="20.0" prefWidth="101.0" text="Length = ">
+                <font>
+                    <Font size="14.0"/>
+                </font>
+            </Label>
+        </FlowPane>
+    </bottom>
 </BorderPane>
